fix alignment in header on main bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -222,6 +222,7 @@
     padding-left: 20px;
     padding-right: 20px;
     overflow-y: scroll;
+    overflow-x: hidden;
     overscroll-behavior: auto contain;
   }
 
